--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
-    <title>Quiz app</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title></title>
 </head>
 <body>
     <header>
@@ -22,7 +25,6 @@
     <main>
         <section class="Boas-vindas">
         <h1>seja bem vindo(a) ao Fronted Quiz!</h1>
-
         <p>Escolha um assunto para começar.</p>
     </section>
 
