--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -6,6 +6,29 @@
     <title>Quiz app</title>
 </head>
 <body>
-    
+    <header>
+        <div class="assunto">
+            <div class="assunto_icone">
+                <img src="../../assets/images/icon-accessibility.svg" alt="Icone da acessibilidade">
+            </div>
+
+         <h1>acessibilidade</h1>
+
+        </div>
+        <div class="tema">
+            <img src="../../assets/images/icon-sun-dark.svg" alt="Icone do sol">
+            <button>
+                <div></div>
+            </button>
+            <img src="../../assets/images/icon-moon-dark.svg" alt="Icone da lua ">
+        </div>
+    </header>
+
+<main>
+    <section class="pergnta">
+        <p>Questão 6 de 10</p>
+    </section>
+</main>
+
 </body>
 </html>
