Primeira parte do formulariodas alternativas

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -27,7 +27,35 @@
 <main>
     <section class="pergnta">
         <p>Questão 6 de 10</p>
+
+        <h2>Qual o signifcado de Html</h2>
+
+        <div class="barras_progresso">
+
+        </div>
     </section>
+
+<section class="alternativas">
+    <form action="">
+        <label form="alternativa_a">
+          <input type="radio" id="alternativa_a">
+
+         <div>
+            <span>A</span>
+          hyper Trainer Marking Language
+         </div>
+
+        </label>
+        <label for="alternativa_b">
+           <input type="radio" id="alternativa_b">
+
+            <div>
+                <span>B</span>
+                Hper Text Marketing Language
+            </div>
+        </label>
+    </form>
+  </section>
 </main>
 
 </body>
