Parte final das alternativas finalizadas e pagina finalizada

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -54,7 +54,29 @@
                 Hper Text Marketing Language
             </div>
         </label>
+
+
+     <label for="alternativa_c">
+        <input type="radio" id="alternativa_c">
+
+        <div>
+            <span>C</span>
+            Hper Text Markup Language
+        </div>
+     </label>
+
+     <label for="alternativa_d">
+        <input type="radio" id="alternaiva_d">
+     </label>
+    
+     <div>
+        <span>D</span>
+        Hper Text Markup Leveler
+     </div>
+
     </form>
+    
+    <button>Enviar</button>
   </section>
 </main>
 
