estilização da pagina do quiz na metade

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="quiz.css">
     <title>Quiz app</title>
 </head>
-<body>
+<body >
     <header>
         <div class="assunto">
             <div class="assunto_icone">
@@ -25,13 +29,13 @@
     </header>
 
 <main>
-    <section class="pergnta">
+    <section class="pergunta">
         <p>Questão 6 de 10</p>
 
         <h2>Qual o signifcado de Html</h2>
 
         <div class="barras_progresso">
-
+         <div></div>
         </div>
     </section>
 
