Adicionada a responsividade para o desktop

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -30,9 +30,11 @@
 
 <main>
     <section class="pergunta">
+        <div>
         <p>Questão 6 de 10</p>
 
         <h2>Qual o signifcado de Html</h2>
+    </div>
 
         <div class="barras_progresso">
          <div></div>
