--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -29,7 +29,29 @@
         </div>
     </header>
 
+<main>
+    <h2>
+        Quiz completo <br>
+        <strong>Sua pontuação...</strong>
+    </h2>
+ 
+    <section class="pontuacao"></section>
+    <div class="assunto">
+        <div class="assunto_icone">
+            <img src="../../assets/images/icon-accessibility.svg" alt="Icone da acessibilidade">
+        </div>
 
+     <h1>Acessibilidade</h1>
+
+    </div>
+
+   <strong>8</strong>
+   <p>8 de 10</p>
+<section>
+
+<button>Jogar novamente</button>
+
+</main>
 
 </body>
 </html>
