--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -23,7 +23,7 @@
         <div class="tema">
             <img src="../../assets/images/icon-sun-dark.svg" alt="Icone do sol">
             <button>
-                <div></div>
+
             </button>
             <img src="../../assets/images/icon-moon-dark.svg" alt="Icone da lua ">
         </div>
@@ -35,7 +35,7 @@
         <strong>Sua pontuação...</strong>
     </h2>
  
-    <section class="pontuacao"></section>
+    <section class="pontuação">
     <div class="assunto">
         <div class="assunto_icone">
             <img src="../../assets/images/icon-accessibility.svg" alt="Icone da acessibilidade">
@@ -46,11 +46,12 @@
     </div>
 
    <strong>8</strong>
-   <p>8 de 10</p>
-<section>
+   <p>de 10</p>
+    
 
 <button>Jogar novamente</button>
-
+</section>
+</main>
 </main>
 
 </body>
