--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -23,7 +23,7 @@
         <div class="tema">
             <img src="../../assets/images/icon-sun-dark.svg" alt="Icone do sol">
             <button>
-
+        <div></div>
             </button>
             <img src="../../assets/images/icon-moon-dark.svg" alt="Icone da lua ">
         </div>
@@ -32,9 +32,11 @@
 <main>
     <h2>
         Quiz completo <br>
-        <strong>Sua pontuação...</strong>
+        <strong>Seus pontos...</strong>
     </h2>
  
+     <div>
+
     <section class="pontuação">
     <div class="assunto">
         <div class="assunto_icone">
@@ -52,6 +54,7 @@
 </section>
 
 <button>Jogar novamente</button>
+</div>
 
 </main>
 
