--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz app</title>
+    <script src="./resultado.js" type="module" defer></script>
 </head>
 <body class="escuro">
     
