--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -14,10 +14,10 @@
     <header>
         <div class="assunto">
             <div class="assunto_icone">
-                <img src="../../assets/images/icon-accessibility.svg" alt="Icone da acessibilidade">
+                <img src="" alt="">
             </div>
 
-         <h1>acessibilidade</h1>
+         <h1></h1>
 
         </div>
         <div class="tema">
