--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -7,17 +7,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="quiz.css">
-    <script src="./quiz.js" type="module" defer></script>
+    <script src="./quiz.js" type="module"></script>
     <title>Quiz app</title>
 </head>
 <body >
     <header>
         <div class="assunto">
             <div class="assunto_icone">
-                <img src="" alt="">
+                <img src="../../assets/images/icon-accessibility.svg" alt="Icone da acessibilidade">
             </div>
 
-         <h1></h1>
+         <h1>acessibilidade</h1>
 
         </div>
         <div class="tema">
