--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,59 +7,58 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="./script.js"  type="module" defer></script>
-    <title>Quiz app</title>
+    <script src="./script.js" type="module" defer></script>
+    <title>Quiz App</title>
 </head>
 <body>
     <header>
         <div class="tema">
-            <img src="./assets/images/icon-sun-dark.svg" alt="Icone do sol">
+            <img src="./assets/images/icon-sun-dark.svg" alt="icone do sol">
             <button>
                 <div></div>
             </button>
-            <img src="./assets/images/icon-moon-dark.svg" alt="Icone da lua ">
+            <img src="./assets/images/icon-moon-dark.svg" alt="icone da lua">
         </div>
     </header>
-    
+
     <main>
         <section class="boas_vindas">
-            <h1>Bem vindo(a) ao <br>
+            <h1>
+                Bem-vindo(a) ao <br> 
                 <strong>Frontend Quiz!</strong>
-            
             </h1>
 
-            <p>Ecolha um assunto para começar</p>
+            <p>Escolha um assunto para começar.</p>
         </section>
 
         <section class="assuntos">
             <button class="botao_html">
                 <div>
-                    <img src="./assets/images/icon-html.svg" alt="Icone do HTML">
+                    <img src="./assets/images/icon-html.svg" alt="icone do html">
                 </div>
-                HTML
+                <span>HTML</span>
             </button>
 
             <button class="botao_css">
                 <div>
-                    <img src="./assets/images/icon-css.svg" alt="Icone do CSS">
+                    <img src="./assets/images/icon-css.svg" alt="icone do css">
                 </div>
-                CSS
+                <span>CSS</span>
             </button>
 
             <button class="botao_javascript">
                 <div>
-                    <img src="./assets/images/icon-js.svg" alt="Icone Javascript">
+                    <img src="./assets/images/icon-javascript.svg" alt="icone do Javascript">
                 </div>
-              Javascript
+                <span>Javascript</span>
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
-                    <img src="./assets/images/icon-accessibilid.svg" alt="icone da acessibilidade">
+                    <img src="./assets/images/icon-acessibilidade.svg" alt="icone da acessibilidade">
                 </div>
-                acessibilidade
+                <span>Acessibilidade</span>
             </button>
-
         </section>
     </main>
 </body>
