--- a/pages/resultado/resultado.html
+++ b/pages/resultado/resultado.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resultado.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="quiz.css">
-    <script src="./quiz.js" type="module" defer></script>
+    <script src="./resultado.js" type="module" defer></script>
     <title>Quiz App</title>
 </head>
+
 <body>
     <header>
         <div class="assunto">
             <div class="assunto_icone">
-                <img src="" alt="">
+                <img src="../../assets/images/icon-accessibility.svg" alt="icone de acessibilidade">
             </div>
 
-            <h1></h1>
+            <h1>Acessibilidade</h1>
         </div>
 
         <div class="tema">
@@ -30,7 +32,19 @@
     </header>
 
     <main>
-        
+        <h2>
+            Quiz completo <br>
+            <strong>Seus pontos...</strong>
+        </h2>
+
+        <div>
+            <section class="pontuacao">
+                
+            </section>
+
+            <button>Jogar novamente</button>
+        </div>
     </main>
 </body>
+
 </html>
